--- a/CuantoMeme/src/app/templates/sidemenu.template.html
+++ b/CuantoMeme/src/app/templates/sidemenu.template.html
@@ -1,18 +1,18 @@
-<div *ngIf="activeUser">
-    <img [src]="activeUser.avatarURL" width="50%" class="rounded-circle img-responsive mx-auto d-block">
-    <h2 class="text-center">{{activeUser.username}}</h2>
+<div *ngIf="servicioLogin.user">
+    <img [src]="servicioLogin.user.avatarURL" width="50%" class="rounded-circle img-responsive mx-auto d-block">
+    <h2 class="text-center">{{servicioLogin.user.username}}</h2>
 </div>
-<div *ngIf="!activeUser">
+<div *ngIf="!servicioLogin.user">
     <h2 class="text-center">Anónimo</h2>
 </div>
 <hr>
-<ul *ngIf="!activeUser">
+<ul *ngIf="!servicioLogin.user">
     <li><a routerLink="/login"><i class="fa fa-sign-in" aria-hidden="true"></i> Inicio de sesión</a></li>
     <li><a routerLink="/signup"><i class="fa fa-pencil-square" aria-hidden="true"></i> Registro</a></li>
 </ul>
-<ul *ngIf="activeUser">
+<ul *ngIf="servicioLogin.user">
     <li><a routerLink="/likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Me gustan</a></li>
     <li><a><i class="fa fa-star" aria-hidden="true"></i> Favoritas</a></li>
-    <li><a [routerLink]="['/perfil', activeUser.id]"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
+    <li><a [routerLink]="['/perfil', servicioLogin.user.id]"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
     <li><a routerLink="/" (click)="logOut()"><i class="fa fa-sign-out" aria-hidden="true"></i> Cerrar sesión</a></li>
 </ul>
