--- a/CuantoMeme/src/app/templates/home.template.html
+++ b/CuantoMeme/src/app/templates/home.template.html
@@ -1,27 +1,22 @@
-<div id="body-perfil">
+<div id="body-perfil" *ngIf="this.ServicioLogin.isLogged">
     <div class="row">
         <div class="col-md-3">
-            <img id="user-avatar" [src]="avatar" width="300px" class="rounded img-fluid mx-auto d-block">
-            <h1 class="display-4 text-center">{{username}}</h1>
-            <p class="lead text-center" *ngIf="email"><i class="fa fa-envelope" aria-hidden="true"></i> Email: {{email}}</p>
-            <div *ngIf="!propio">
-                <button class="btn btn-block btn-info follow">Seguir</button>
-            </div>
+            <img id="user-avatar" [src]="this.ServicioLogin.user.avatarURL" width="300px" class="rounded img-fluid mx-auto d-block">
+            <h1 class="display-4 text-center">{{this.ServicioLogin.user.username}}</h1>
+            <p class="lead text-center"><i class="fa fa-envelope" aria-hidden="true"></i> Email: {{email}}</p>
             <hr>
         </div>
         <div class="col-md-9">
             <div class="btn-group" role="group" aria-label="aaa">
               <button type="button" [ngClass]="{'active': opcion == 'publicadas'}" (click)="eleccion('publicadas')"  class="btn btn-lg btn-link">Publicadas</button>
-              <div *ngIf="propio">
               <button type="button" [ngClass]="{'active': opcion == 'timeline'}" (click)="eleccion('timeline')"  class="btn btn-lg btn-link active">Timeline</button>
               <button type="button" [ngClass]="{'active': opcion == 'publicar'}" (click)="eleccion('publicar')"  class="btn btn-lg btn-link">Publicar viñeta</button>
               <button type="button" [ngClass]="{'active': opcion == 'modificar'}" (click)="eleccion('modificar')"  class="btn btn-lg btn-link">Modificar perfil</button>
-              </div>
               <button type="button" [ngClass]="{'active': opcion == 'seguidos'}" (click)="eleccion('seguidos')"  class="btn btn-lg btn-link">Seguidos</button>
             </div>
             <hr>
             <div *ngIf="opcion == 'publicadas'">
-                <lista-vinetas [listaVinetas]="subidas"></lista-vinetas>
+                <lista-vinetas [listaVinetas]="this.ServicioLogin.user.getSubidas()"></lista-vinetas>
             </div>
             <div *ngIf="opcion == 'publicar'">
                <div class="col-md-7">
@@ -57,18 +52,6 @@
                             <small>¡No más de 1mb!</small>
                         </div>
                         <button class="btn btn-info" type="button" (click)="cambiarAvatar()">¡Enviar!</button>
-                    </form>
-                    <hr>
-                    <form>
-                        <div class="form-group">
-                            <label for="usernameinput">Cambiar nombre de usuario</label>
-                            <input [(ngModel)]="usernameModified" type="text" class="form-control" id="usernameinput" placeholder="Nombre de usuario" name="username">
-                        </div>
-                        <div class="form-group">
-                            <label for="emailinput">Cambiar email</label>
-                            <input [(ngModel)]="emailModified" type="text" class="form-control" id="emailinput" placeholder="email" name="email">
-                        </div>
-                        <button class="btn btn-info" type="button" (click)="cambiarUsuario">¡Enviar!</button>
                     </form>
                </div>
             </div>
