--- a/CuantoMeme/src/app/templates/sidemenu.template.html
+++ b/CuantoMeme/src/app/templates/sidemenu.template.html
@@ -14,6 +14,6 @@
     <li><a routerLink="/likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Me gustan</a></li>
     <li><a routerLink="/favorites"><i class="fa fa-star" aria-hidden="true"></i> Favoritas</a></li>
     <li><a routerLink="/dislikes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Las odio</a></li>
-    <li><a [routerLink]="['/perfil', servicioLogin.user.id]"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
+    <li><a routerLink='/home'><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
     <li><a routerLink="/" (click)="logOut()"><i class="fa fa-sign-out" aria-hidden="true"></i> Cerrar sesión</a></li>
 </ul>
