--- a/CuantoMeme/src/app/templates/detallesVineta.template.html
+++ b/CuantoMeme/src/app/templates/detallesVineta.template.html
@@ -22,7 +22,8 @@
             <div class="usuario-info text-center"><a href="#">
                 <img class="responsive rounded-circle mx-auto d-block" width="150px" [src]="vineta.autor.avatarURL" alt="Generic placeholder image">
                 <h2 class="text-center">{{vineta.autor.username}}</h2></a>
-                <button class="btn btn-info btn-seguir">Seguir</button>
+                <button *ngIf="!followinguser" (click)="followuser(vineta.autor.id)" class="btn btn-info btn-seguir">Seguir</button>
+                <button *ngIf="followinguser"  (click)="unfollowuser(vineta.autor.id)" class="btn btn-info btn-seguir">Dejar de Seguir</button>
             </div>
         </div>
     </div>
