--- a/CuantoMeme/src/app/templates/home.template.html
+++ b/CuantoMeme/src/app/templates/home.template.html
@@ -78,7 +78,7 @@
                         <img width="100px" class="d-flex mr-3 rounded-circle" [src]="usuario.avatarURL" alt="Generic placeholder image">
                         <div class="media-body">
                             <h4 class="mt-0 mb-1 display-4">{{usuario.username}}</h4>
-                            <button type="button" (click)="unfollow(usuario, seguidores)" class="btn btn-sm btn-follow btn-primary">Dejar de seguir</button>
+                            <button type="button" (click)="unfollow(usuario, seguidores)" class="btn btn-sm btn-follow btn-primary">Seguir</button>
                         </div>
                     </li>
                 </ul>
