--- a/CuantoMeme/src/app/templates/perfil.template.html
+++ b/CuantoMeme/src/app/templates/perfil.template.html
@@ -1,11 +1,12 @@
 <div id="body-perfil">
-    <div class="row">
+    <div *ngIf="usuario" class="row">
         <div class="col-md-3">
-            <img id="user-avatar" [src]="avatar" width="300px" class="rounded img-fluid mx-auto d-block">
-            <h1 class="display-4 text-center">{{username}}</h1>
-            <p class="lead text-center"><i class="fa fa-envelope" aria-hidden="true"></i> Email: {{username}}@cuantomeme.com</p>
+            <img id="user-avatar" [src]="usuario.avatarURL" width="300px" class="rounded img-fluid mx-auto d-block">
+            <h1 class="display-4 text-center">{{usuario.username}}</h1>
+            <p class="lead text-center"><i class="fa fa-envelope" aria-hidden="true"></i> Email: {{usuario.email}}</p>
             <div *ngIf="!propio">
-                <button (click)="seguir()" class="btn btn-block btn-info follow">Seguir</button>
+                <button *ngIf="!followinguser" (click)="followuser()" class="btn btn-block btn-info follow">Seguir</button>
+                <button *ngIf="followinguser"(click)="unfollowuser()" class="btn btn-block btn-info follow">Dejar de Seguir</button>
                 <button *ngIf="isAdmin" (click)="eliminarUsuario()" class="btn btn-block btn-danger follow">Eliminar</button>
             </div>
             <hr>
@@ -18,12 +19,12 @@
             </div>
             <hr>
             <div *ngIf="opcion == 'publicadas'">
-                <lista-vinetas [listaVinetas]="subidas"></lista-vinetas>
+                <lista-vinetas [listaVinetas]="usuario.subidas"></lista-vinetas>
             </div>
             <div *ngIf="opcion == 'seguidos'">
                 <ul class="list-unstyled">
-                    <h2 *ngIf="seguidos.length < 1">¡No sigues a nadie!</h2>
-                    <li class="media" *ngFor="let usuario of seguidos">
+                    <h2 *ngIf="usuario.seguidos.length < 1">¡No sigues a nadie!</h2>
+                    <li class="media" *ngFor="let usuario of usuario.seguidos">
                         <img width="100px" class="d-flex mr-3 rounded-circle" [src]="usuario.avatarURL" alt="Generic placeholder image">
                         <div class="media-body">
                             <h4 class="mt-0 mb-1 display-4">{{usuario.username}}</h4>
@@ -33,8 +34,8 @@
             </div>
             <div *ngIf="opcion == 'seguidores'">
                 <ul class="list-unstyled">
-                    <h2 *ngIf="seguidores.length < 1">¡No te sigue nadie!</h2>
-                    <li class="media" *ngFor="let usuario of seguidores">
+                    <h2 *ngIf="usuario.seguidores.length < 1">¡No te sigue nadie!</h2>
+                    <li class="media" *ngFor="let usuario of usuario.seguidores">
                         <img width="100px" class="d-flex mr-3 rounded-circle" [src]="usuario.avatarURL" alt="Generic placeholder image">
                         <div class="media-body">
                             <h4 class="mt-0 mb-1 display-4">{{usuario.username}}</h4>
