--- a/CuantoMeme/src/app/templates/detallesVineta.template.html
+++ b/CuantoMeme/src/app/templates/detallesVineta.template.html
@@ -19,7 +19,7 @@
         <div class="col-md-2">
             <h3 class="lead">Autor</h3>
             <hr>
-            <div class="usuario-info text-center"><a href="#">
+            <div class="usuario-info text-center"><a [routerLink]="['/perfil', vineta.autor.id]">
                 <img class="responsive rounded-circle mx-auto d-block" width="150px" [src]="vineta.autor.avatarURL" alt="Generic placeholder image">
                 <h2 class="text-center">{{vineta.autor.username}}</h2></a>
                 <button *ngIf="!followinguser" (click)="followuser(vineta.autor.id)" class="btn btn-info btn-seguir">Seguir</button>
