--- a/CuantoMeme/src/app/templates/app.component.html
+++ b/CuantoMeme/src/app/templates/app.component.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <button id="menutoggle" (click)="toggleMenu()" class="btn btn-outline-secondary"><i class="fa fa-bars fa-4" aria-hidden="true"></i></button>
         <div class="divider">-</div>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
         <img src="../../assets/CuantoMeme.png" width="30" height="30" class="d-inline-block align-top" alt="Cuanto Meme"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">Cuanto Meme</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
